--- a/app/templates/settings/user.html
+++ b/app/templates/settings/user.html
@@ -7,17 +7,19 @@
 		
 		{% if update_users_form is not none %}
 			<h3>Update users</h3>
-			<form class="grid-form" method="POST" action="{{ url_for('settings.user') }}">
+			<form class="user-form no-help" method="POST" action="{{ url_for('settings.user') }}">
 				{{ update_users_form.csrf_token }}
+				<div class="username">Username</div>
+				<div class="password">Password</div>
+				<div class="is-admin">Make admin</div>
+				<div class="delete-user">Delete user</div>
 				{% for user in update_users_form.users %}
-					<div class="subform">
-						{{ user.user_id }}
-						{{ user.username }}
-						{{ user.password }}
-						{{ user.is_admin }}
-						{{ user.delete_user }}
-						{{ error_list(user) }}
-					</div>
+					{{ user.user_id }}
+					{{ user.username(class = 'username') }}
+					{{ user.password(class = 'password') }}
+					{{ user.is_admin(class = 'is-admin') }}
+					{{ user.delete_user(class = 'delete-user') }}
+					{{ error_list(user) }}
 				{% endfor %}
 				{{ update_users_form.update_many }}
 			</form>
@@ -25,7 +27,7 @@
 		
 		{% if add_user_form is not none %}
 			<h3>Add user</h3>
-			<form class="grid-form" method="POST" action="{{ url_for('settings.user') }}">
+			<form class="grid-form no-help" method="POST" action="{{ url_for('settings.user') }}">
 				{{ add_user_form.csrf_token }}
 				{{ render_field(add_user_form.username) }}
 				{{ render_field(add_user_form.password) }}
@@ -35,7 +37,7 @@
 		{% endif %}
 		
 		<h3>Change password</h3>
-		<form class="grid-form" method="POST" action="{{ url_for('settings.user') }}">
+		<form class="grid-form no-help" method="POST" action="{{ url_for('settings.user') }}">
 			{{ update_self_form.csrf_token }}
 			{{ render_field(update_self_form.current_password) }}
 			{{ render_field(update_self_form.new_password) }}
