fixed show more/less, various cleanups

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,7 +47,7 @@
 			</button>
 		</div>
 		
-		<div id="info" class="info-container full-height hidden has-bg">
+		<div id="info" class="info-container hidden has-bg">
 			<div class="info">
 				<div class="title"></div>
 				<a class="uploader" target="_blank"></a>
@@ -81,8 +81,7 @@
 				</div>
 			</div>
 			<div class="show-more hidden">
-				<a class="meta-label more-link">Show more</a>
-				<a class="meta-label less-link">Show less</a>
+				<button>{{ render_sprite('show-more') }}</button>
 			</div>
 		</div>
 	</section>
