--- a/app/static/style.css
+++ b/app/static/style.css
@@ -220,9 +220,8 @@ table {
 		grid-row: 1; /* Stack above background */
 		
 		display: grid;
-		/* minmax(0, max-content): search column no space when hidden */
-		/* grid-template-columns: 0 auto minmax(max-content, 1fr) minmax(0, max-content) auto auto 0; */
-		/* min-content so search fits small screen */
+		/* minmax(0, min-content): search column no space when hidden,
+		   fits small screens when shown */
 		grid-template-columns: 0 auto minmax(min-content, 1fr) minmax(0, min-content) auto auto 0;
 		grid-template-areas:
 			" . logo pages search toggles user . ";
@@ -343,16 +342,6 @@ table {
 				z-index: 1;
 			}
 			
-				.search .input-container:focus-within {
-					/* Outline entire container, not just input */
-					/* outline: var(--foreground) auto 1px; */
-				}
-				
-					.search .search-query:focus-within,
-					.search .search-field:focus-within {
-						outline: none; /* Override browser default */
-					}
-			
 				.search .search-query {
 					grid-column: query;
 					
@@ -365,6 +354,11 @@ table {
 					color: var(--foreground);
 				}
 				
+					.search .search-query:focus-within,
+					.search .search-field:focus-within {
+						outline: none; /* Override browser default */
+					}
+					
 				.search label {
 					grid-column: label;
 					
@@ -422,18 +416,12 @@ table {
 						/* Custom dropdown arrow */
 						position: absolute;
 						width: 1rem;
-						/* height: 100%; */
 						top: 0.9rem;
 						right: 0.75rem;
 						/* Under select so doesn't block click, above bg */
 						z-index: -2; /* Prevent arrow blocking click */
 					}
-					
-						.field-container .select-arrow .sprite {
-							/* width: 100%; Override header sprites */
-							/* todo: might not need any more now out of header */
-						}
-		
+			
 			.search .results-container {
 				position: absolute;
 				left: -0.5rem;
@@ -591,8 +579,6 @@ table {
 
 	.messages {
 		grid-column: main-left / sidebar-right;
-		/* todo: probably remove see container */
-		/* grid-row: messages-top / messages-bottom; */
 		
 		margin-top: 0.5rem;
 	}
@@ -605,10 +591,6 @@ table {
 			column-gap: 1rem;
 			padding: 0.5rem 1rem;
 			margin-bottom: 0.5rem;
-		}
-		
-		.flash:first-of-type {
-			/* margin-top: 0.5rem; */
 		}
 		
 			.flash .level {
@@ -783,9 +765,9 @@ table {
 				.info-container:not(.full-height) .info {
 					/* Overflow and fade when not full height */
 					overflow: hidden;
-					max-height: 11rem; /* ~fits in a 1920x1080 16:9 viewport */
-					-webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
-					mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+					max-height: 11.5rem; /* ~fits in a 1920x1080 16:9 viewport */
+					-webkit-mask-image: linear-gradient(to bottom, black 75%, transparent 100%);
+					mask-image: linear-gradient(to bottom, black 75%, transparent 100%);
 				}
 			
 				.title {
@@ -800,7 +782,6 @@ table {
 					grid-area: user;
 					
 					margin-right: auto; /* Only clickable where visible */
-					word-break: break-word; /* Long names can break */
 					color: inherit;
 				}
 				
@@ -856,6 +837,10 @@ table {
 						margin: 0 0.25rem;
 					}
 				
+				.title, .uploader, .description {
+					word-wrap: break-word; /* Long lines break */
+				}
+				
 				.views, .rating, .format, .link {
 					text-align: center;
 				}
@@ -887,8 +872,6 @@ table {
 				
 					.description {
 						grid-area: desc-text;
-						
-						word-break: break-word; /* Long lines break */
 					}
 					
 						.description p {
@@ -916,28 +899,24 @@ table {
 				display: flex;
 				justify-content: center;
 				width: 100%;
-				bottom: -1.5rem;
+				bottom: -1rem;
 				/* Offset left/right padding difference on container */
 				margin-left: -2rem;
 			}
 			
-				.show-more a {
+				.show-more button {
+					width: 2.5rem;
+					height: 2.5rem;
+					padding: 0.5rem; /* Easier clickin' */
+					background: none;
 					cursor: pointer;
-					padding: 1rem; /* Easier clickin' */
-				}
-			
-				.full-height .less-link, .more-link {
-					/* Display "show more" by default;
-					   "show less" when full height */
-					display: block;
-				}
-			
-				.full-height .more-link, .less-link {
-					/* Hide "show less" by default;
-					   "show more" when full height */
-					display: none;
 				}
 				
+					.full-height .show-more .sprite {
+						/* More: v; less: ^ */
+						transform: rotate(180deg);
+					}
+			
 			@media screen and (max-width: 660px) {
 				.info-container .info {
 					grid-template-columns: repeat(4, 1fr);
@@ -1595,7 +1574,7 @@ form {
 
 @media screen and (max-width: 860px) {
 	.notifications {
-		/* Bottom of viewport to not cover player */
+		/* Bottom of viewport to not cover player on small screens */
 		top: unset;
 		bottom: 0;
 	}
